完成棋子样式（终于可以愉快地写JS了）

--- a/html/index.html
+++ b/html/index.html
@@ -39,14 +39,32 @@
                                 </div>
                                 <div class="col chessboard-gird">
                                     <div class="chessboard-line-backslash"></div>
-                                    <div class="chess-pieces-location"></div>
+                                    <div class="chess-pieces-location">
+                                        <div class="chess-pieces chess-pieces--black">
+                                            <div class="chess-pieces-border">
+                                                <div class="chess-pieces-character">士</div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col chessboard-gird">
                                     <div class="chessboard-line-slash"></div>
-                                    <div class="chess-pieces-location"></div>
+                                    <div class="chess-pieces-location">
+                                        <div class="chess-pieces chess-pieces--black">
+                                            <div class="chess-pieces-border">
+                                                <div class="chess-pieces-character">将</div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col chessboard-gird">
-                                    <div class="chess-pieces-location"></div>
+                                    <div class="chess-pieces-location">
+                                        <div class="chess-pieces chess-pieces--black">
+                                            <div class="chess-pieces-border">
+                                                <div class="chess-pieces-character">士</div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col chessboard-gird">
                                     <div class="chess-pieces-location"></div>
@@ -118,7 +136,13 @@
                                 </div>
                                 <div class="col chessboard-gird">
                                     <span class="chess-pieces-location-corner chess-pieces-location-corner--LB"><!--定位标识--></span>
-                                    <div class="chess-pieces-location"></div>
+                                    <div class="chess-pieces-location">
+                                        <div class="chess-pieces chess-pieces--black">
+                                            <div class="chess-pieces-border">
+                                                <div class="chess-pieces-character">象</div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col chessboard-gird">
                                     <span class="chess-pieces-location-corner chess-pieces-location-corner--RB"><!--定位标识--></span>
@@ -159,7 +183,13 @@
                                 </div>
                                 <div class="col chessboard-gird">
                                     <span class="chess-pieces-location-corner chess-pieces-location-corner--LT"><!--定位标识--></span>
-                                    <div class="chess-pieces-location"></div>
+                                    <div class="chess-pieces-location">
+                                        <div class="chess-pieces chess-pieces--black">
+                                            <div class="chess-pieces-border">
+                                                <div class="chess-pieces-character">卒</div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col chessboard-gird">
                                     <span class="chess-pieces-location-corner chess-pieces-location-corner--RT"><!--定位标识--></span>
@@ -270,7 +300,13 @@
                                 </div>
                                 <div class="col chessboard-gird">
                                     <span class="chess-pieces-location-corner chess-pieces-location-corner--LT"><!--定位标识--></span>
-                                    <div class="chess-pieces-location"></div>
+                                    <div class="chess-pieces-location">
+                                        <div class="chess-pieces chess-pieces--red">
+                                            <div class="chess-pieces-border">
+                                                <div class="chess-pieces-character">兵</div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col chessboard-gird">
                                     <span class="chess-pieces-location-corner chess-pieces-location-corner--RT"><!--定位标识--></span>
@@ -310,7 +346,13 @@
                                 </div>
                                 <div class="col chessboard-gird">
                                     <div class="chessboard-line-slash"></div>
-                                    <div class="chess-pieces-location"></div>
+                                    <div class="chess-pieces-location">
+                                        <div class="chess-pieces chess-pieces--red">
+                                            <div class="chess-pieces-border">
+                                                <div class="chess-pieces-character">相</div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col chessboard-gird">
                                     <div class="chess-pieces-location"></div>
@@ -349,18 +391,36 @@
                                     <div class="chessboard-line-slash"></div>
                                     <div class="chess-pieces-location"></div>
                                     <!--最后一行补充的棋子位置容器-->
-                                    <div class="chess-pieces-location chess-pieces-location--row-last"></div>
+                                    <div class="chess-pieces-location chess-pieces-location--row-last">
+                                        <div class="chess-pieces chess-pieces--red">
+                                            <div class="chess-pieces-border">
+                                                <div class="chess-pieces-character">仕</div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col chessboard-gird">
                                     <div class="chessboard-line-backslash"></div>
                                     <div class="chess-pieces-location"></div>
                                     <!--最后一行补充的棋子位置容器-->
-                                    <div class="chess-pieces-location chess-pieces-location--row-last"></div>
+                                    <div class="chess-pieces-location chess-pieces-location--row-last">
+                                        <div class="chess-pieces chess-pieces--red">
+                                            <div class="chess-pieces-border">
+                                                <div class="chess-pieces-character">帅</div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col chessboard-gird">
                                     <div class="chess-pieces-location"></div>
                                     <!--最后一行补充的棋子位置容器-->
-                                    <div class="chess-pieces-location chess-pieces-location--row-last"></div>
+                                    <div class="chess-pieces-location chess-pieces-location--row-last">
+                                        <div class="chess-pieces chess-pieces--red">
+                                            <div class="chess-pieces-border">
+                                                <div class="chess-pieces-character">仕</div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col chessboard-gird">
                                     <div class="chess-pieces-location"></div>
