添加 棋子类，完成棋子类基础功能：初始化数据、放置到棋盘指定位置

--- a/html/index.html
+++ b/html/index.html
@@ -449,5 +449,7 @@
     <!-- Kube JS + jQuery are used for some functionality, but are not required for the basic setup -->
     <script src="../static/lib/jquery/jquery-2.2.0.min.js"></script>
     <script src="../static/lib/kube-6.5.2/js/kube.js"></script>
+
+    <script src="../static/js/chess.js"></script>
 </body>
 </html>
