--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,7 @@
         </div>
 
         <div class="row align-center">
+            <div class="col-2"></div>
             <div class="col col-6">
                 <div class="chessboard-container">
                     <div class="chessboard-bg full-absolute">
@@ -442,6 +443,12 @@
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="col-2">
+                <p class="hide location-show">
+                    棋点坐标指示：(<span id="locationX">-</span>, <span id="locationY">-</span>)
+                </p>
             </div>
         </div>
     </div>
