--- a/html/index.html
+++ b/html/index.html
@@ -40,32 +40,21 @@
                                 </div>
                                 <div class="col chessboard-gird">
                                     <div class="chessboard-line-backslash"></div>
-                                    <div class="chess-pieces-location">
-                                        <div class="chess-pieces chess-pieces--black">
-                                            <div class="chess-pieces-border">
-                                                <div class="chess-pieces-character">士</div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <div class="chess-pieces-location"></div>
                                 </div>
                                 <div class="col chessboard-gird">
                                     <div class="chessboard-line-slash"></div>
                                     <div class="chess-pieces-location">
-                                        <div class="chess-pieces chess-pieces--black">
+                                        <!--由JS填充棋子-->
+                                        <!--<div class="chess-pieces chess-pieces--black">
                                             <div class="chess-pieces-border">
                                                 <div class="chess-pieces-character">将</div>
                                             </div>
-                                        </div>
+                                        </div>-->
                                     </div>
                                 </div>
                                 <div class="col chessboard-gird">
-                                    <div class="chess-pieces-location">
-                                        <div class="chess-pieces chess-pieces--black">
-                                            <div class="chess-pieces-border">
-                                                <div class="chess-pieces-character">士</div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <div class="chess-pieces-location"></div>
                                 </div>
                                 <div class="col chessboard-gird">
                                     <div class="chess-pieces-location"></div>
@@ -137,13 +126,7 @@
                                 </div>
                                 <div class="col chessboard-gird">
                                     <span class="chess-pieces-location-corner chess-pieces-location-corner--LB"><!--定位标识--></span>
-                                    <div class="chess-pieces-location">
-                                        <div class="chess-pieces chess-pieces--black">
-                                            <div class="chess-pieces-border">
-                                                <div class="chess-pieces-character">象</div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <div class="chess-pieces-location"></div>
                                 </div>
                                 <div class="col chessboard-gird">
                                     <span class="chess-pieces-location-corner chess-pieces-location-corner--RB"><!--定位标识--></span>
@@ -184,13 +167,7 @@
                                 </div>
                                 <div class="col chessboard-gird">
                                     <span class="chess-pieces-location-corner chess-pieces-location-corner--LT"><!--定位标识--></span>
-                                    <div class="chess-pieces-location">
-                                        <div class="chess-pieces chess-pieces--black">
-                                            <div class="chess-pieces-border">
-                                                <div class="chess-pieces-character">卒</div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <div class="chess-pieces-location"></div>
                                 </div>
                                 <div class="col chessboard-gird">
                                     <span class="chess-pieces-location-corner chess-pieces-location-corner--RT"><!--定位标识--></span>
@@ -301,13 +278,7 @@
                                 </div>
                                 <div class="col chessboard-gird">
                                     <span class="chess-pieces-location-corner chess-pieces-location-corner--LT"><!--定位标识--></span>
-                                    <div class="chess-pieces-location">
-                                        <div class="chess-pieces chess-pieces--red">
-                                            <div class="chess-pieces-border">
-                                                <div class="chess-pieces-character">兵</div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <div class="chess-pieces-location"></div>
                                 </div>
                                 <div class="col chessboard-gird">
                                     <span class="chess-pieces-location-corner chess-pieces-location-corner--RT"><!--定位标识--></span>
@@ -347,13 +318,7 @@
                                 </div>
                                 <div class="col chessboard-gird">
                                     <div class="chessboard-line-slash"></div>
-                                    <div class="chess-pieces-location">
-                                        <div class="chess-pieces chess-pieces--red">
-                                            <div class="chess-pieces-border">
-                                                <div class="chess-pieces-character">相</div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <div class="chess-pieces-location"></div>
                                 </div>
                                 <div class="col chessboard-gird">
                                     <div class="chess-pieces-location"></div>
@@ -392,36 +357,25 @@
                                     <div class="chessboard-line-slash"></div>
                                     <div class="chess-pieces-location"></div>
                                     <!--最后一行补充的棋子位置容器-->
-                                    <div class="chess-pieces-location chess-pieces-location--row-last">
-                                        <div class="chess-pieces chess-pieces--red">
-                                            <div class="chess-pieces-border">
-                                                <div class="chess-pieces-character">仕</div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <div class="chess-pieces-location chess-pieces-location--row-last"></div>
                                 </div>
                                 <div class="col chessboard-gird">
                                     <div class="chessboard-line-backslash"></div>
                                     <div class="chess-pieces-location"></div>
                                     <!--最后一行补充的棋子位置容器-->
                                     <div class="chess-pieces-location chess-pieces-location--row-last">
-                                        <div class="chess-pieces chess-pieces--red">
+                                        <!--由JS填充棋子-->
+                                        <!--<div class="chess-pieces chess-pieces--red">
                                             <div class="chess-pieces-border">
                                                 <div class="chess-pieces-character">帅</div>
                                             </div>
-                                        </div>
+                                        </div>-->
                                     </div>
                                 </div>
                                 <div class="col chessboard-gird">
                                     <div class="chess-pieces-location"></div>
                                     <!--最后一行补充的棋子位置容器-->
-                                    <div class="chess-pieces-location chess-pieces-location--row-last">
-                                        <div class="chess-pieces chess-pieces--red">
-                                            <div class="chess-pieces-border">
-                                                <div class="chess-pieces-character">仕</div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <div class="chess-pieces-location chess-pieces-location--row-last"></div>
                                 </div>
                                 <div class="col chessboard-gird">
                                     <div class="chess-pieces-location"></div>
